Open Vehicle Monitor System v3 - Change log

????-??-?? ???  ???????  OTA release
- Scripting API: added VFS.Load() & VFS.Save()
- Scripting API: renamed HTTP.request() to HTTP.Request() for API consistency
- Scripting API: added OvmsMetrics.GetValues()
- Web UI: editor extended by embedded Javascript evaluation
- Webserver: /api/execute: support for Javascript evaluation
- Scripting API: added OvmsConfig.GetValues() & OvmsConfig.SetValues()
- Config: added dedicated "usr" param for plugin configurations
- Scripting API: HTTP.request() added
- SmartED: add BMS diagnose report
  New commands:
    xse rptdata     get a Battery Status Report
    xse bmsdiag     get Battery Diagnose Report

2019-12-13 MWJ  3.2.008  OTA release
- Add support for 8MB PSRAM (in addition to current 4MB support)
- Improvements to CAN driver, relating to obd2hud
- Nissan Leaf: 40kWh option

2019-12-09 MWJ  3.2.007  OTA release
- Minor change to web sheel (to decode line breaks in log messages)
- Javascript: Conduct garbage collection per minute, to reduce memory consumption

2019-11-30 MWJ  3.2.006  OTA release
- 12V Monitor: web UI calibration aid & configuration
- EGPIO/MAX7317: port input monitoring, metrics, events, documentation
  New commands:
    egpio status                    Show input, output & monitoring port status
    egpio monitor status            Show input monitoring status
    egpio monitor <on|off> [ports]  Enable/disable port monitoring
  New configs:
    [auto] egpio                    yes = Autostart port monitoring (default no)
    [egpio] monitor.ports           Default ports to monitor (space separated)
    [egpio] monitor.interval        Polling interval in ms (default 50)
  New metrics:
    m.egpio.input                   EGPIO input port state (ports 0…9, present=high)
    m.egpio.monitor                 EGPIO input monitoring ports
    m.egpio.output                  EGPIO output port state
  New events: